Updated S3 bucket name to be unique

--- a/101-OURFIRSTTEMPLATE/wp-infrastructure-101-Linux1-distro-us-east-1.json
+++ b/101-OURFIRSTTEMPLATE/wp-infrastructure-101-Linux1-distro-us-east-1.json
@@ -24,7 +24,7 @@
     "S3": {
       "Type": "AWS::S3::Bucket",
       "Properties": {
-        "BucketName": "wp-xxxxxxxxxxx"
+        "BucketName": "wp-tcoyle0825-adv-cf-101"
       }
     }
   }
