--- a/103-UserData Installing WordPress/wp-infrastructure-103-Linux1-distro.yaml
+++ b/103-UserData Installing WordPress/wp-infrastructure-103-Linux1-distro.yaml
@@ -82,13 +82,14 @@ Resources:
           !Sub |
             #!/bin/bash
             yum install httpd php mysql php-mysql -y
+            amazon-linux-extras install -y php7.3
             yum update -y
             chkconfig httpd on
             service httpd start
             cd /var/www/html
-            wget https://wordpress.org/wordpress-5.1.1.tar.gz
-            tar -zxvf wordpress-5.1.1.tar.gz --strip 1
-            rm wordpress-5.1.1.tar.gz
+            wget https://wordpress.org/latest.tar.gz
+            tar -zxvf latest.tar.gz --strip 1
+            rm latest.tar.gz
             cp wp-config-sample.php wp-config.php
             sed -i 's/database_name_here/${DatabaseName}/g' wp-config.php
             sed -i 's/localhost/${DB.Endpoint.Address}/g' wp-config.php
