Set AMI in us-east-1 to version 1 and set Wordpress to version 5.1.1.1

--- a/104-CloudFormationInit/wp-infrastructure-104-Linux1-distro.yaml
+++ b/104-CloudFormationInit/wp-infrastructure-104-Linux1-distro.yaml
@@ -23,7 +23,7 @@ Parameters:
 Mappings:
   RegionMap:
     us-east-1:
-      AMALINUX: ami-02354e95b39ca8dec
+      AMALINUX: ami-0761dd91277e34178
     us-east-2:
       AMALINUX: ami-07c8bc5c1ce9598c3
     us-west-1:
@@ -85,9 +85,9 @@ Resources:
         "Fn::Base64":
           !Sub |
             #!/bin/bash
-            yum update -y aws-cfn-bootstrap # good practice - always do this.
+            ps aux | grep yum
+            yum update -y aws-cfn-bootstrap
             /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource EC2 --configsets wordpress --region ${AWS::Region}
-            yum -y update
     Metadata:
       AWS::CloudFormation::Init:
         configSets:
@@ -133,8 +133,10 @@ Resources:
               php: []
               mysql: []
               php-mysql: []
+            amazon-linux-extras:
+              php7.3: []
           sources:
-            /var/www/html: "http://wordpress.org/latest.tar.gz"
+            /var/www/html: "http://wordpress.org/wordpress-5.1.1.tar.gz"
           services:
             sysvinit:
               httpd:
